--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.1.1",
+    "axios": "^1.6.2",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.9",
     "dotenv": "16.3.1",
